syntax = "proto3";

package auth.v1;

option go_package = "github.com/vagonaizer/authenitfication-service/api/proto/generated";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (TokenClaimsResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string refresh_token = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
  User user = 5;
}

message TokenResponse {
  string access_token = 1;
  string token_type = 2;
  int64 expires_in = 3;
}

message LogoutResponse {
  string message = 1;
}

message ChangePasswordResponse {
  string message = 1;
}

message TokenClaimsResponse {
  string user_id = 1;
  string email = 2;
  string username = 3;
  repeated string roles = 4;
  google.protobuf.Timestamp expires_at = 5;
  google.protobuf.Timestamp issued_at = 6;
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  bool is_active = 6;
  bool is_verified = 7;
  google.protobuf.Timestamp last_login_at = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}
